syntax = "proto3";
package services;

option go_package=".;services";

import "google/api/annotations.proto";

message ProductRequest {
  int32 pro_id = 1;
}

message ProductResponse {
  int32 stock_status = 1;
  string product_name = 2;
}

message QuerySize {
  int32 size = 1;
}
message ProductResponseList { // 返回一堆商品列表
  repeated ProductResponse list = 1; // repeated 修饰符，返回字段可以重复任意多次（包括0次），相当于数组
}
service ProductService {
  rpc GetProductStockStatus(ProductRequest) returns (ProductResponse){
    option(google.api.http) = {
      get:"/v1/product_stock/{pro_id}"
    };
  }
  rpc GetProductName(ProductRequest) returns (ProductResponse);
  rpc GetProductProductList(QuerySize) returns (ProductResponseList) {
    option(google.api.http) = {
      get:"/v1/pro_list/{size}"
    };
  }
}